fixed bugs
fixed image overlapping on recipe name when hovering and fixed footer getYear function

--- a/src/components/RecipeSearch/RecipeSearchCards.css
+++ b/src/components/RecipeSearch/RecipeSearchCards.css
@@ -24,6 +24,7 @@
 
 .image-container:hover {
     transform: scale(1.2);
+    margin-bottom: 20px;
 }
 
 .card-title{
